--- a/Rectangle_Perimeter_Area/Rectangle_Perimeter_Area.vcxproj
+++ b/Rectangle_Perimeter_Area/Rectangle_Perimeter_Area.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Rectangle_Perimeter_Area.cpp" />
+    <ClCompile Include="Rectangle_Perimeter_Area.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
